# ethereum-node

./: .env  .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  crowdin.yml  funding.json  package-lock.json
controls/: README.md  finishUpdate.yaml  genericPlaybook.yaml  pyproject.toml  setup.yaml  stereum-services-update.sh  unattended-update.sh
controls/callback_plugins/: stereumjson.py
controls/defaults/: stereum_defaults.yaml
controls/roles/2fa-enable/tasks/: main.yaml
controls/roles/2fa-enable/tests/: test.yml
controls/roles/2fa-remove/tasks/: main.yaml
controls/roles/2fa-remove/tests/: test.yml
controls/roles/2fa-setup/tasks/: main.yaml
controls/roles/2fa-setup/tests/: test.yml
controls/roles/configure-firewall/tasks/: main.yaml  packages.yaml  ufw.yaml
controls/roles/configure-firewall/tests/: test.yml
controls/roles/configure-firewall/vars/: main.yml
controls/roles/configure-updates/tasks/: main.yml
controls/roles/configure-updates/tests/: test.yml
controls/roles/copy-devnet-genesis/files/: genesis.json
controls/roles/copy-devnet-genesis/tasks/: copy_genesis_files.yml  create_directories.yml  main.yml
controls/roles/create-devnet/files/: config.yml  createJWT.py
controls/roles/create-devnet/tasks/: create_JWT.yml  create_directories_copy_files.yml  create_docker_network.yml  create_genesis.yml  geth_remove_db.yml  main.yml  run_geth_execution_client.yml  run_prysm_beacon_chain.yml  run_prysm_validator_client.yml  (+1 more)
controls/roles/validator-import-lighthouse/: .yamllint
controls/roles/validator-import-teku/: .yamllint
(+1929 files in other folders)
