[tool.poetry]
name = "stereum-molecule-test-environment"
version = "0.1.0"
description = "A test environment for testing Ansible roles with Molecule."
authors = ["stereum.com"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ansible = "^13.3.0"
molecule = {extras = ["docker-lint"], version = "^25.12.0"}
molecule-plugins = {extras = ["docker"], version = "^25.8.12"}
molecule-hetznercloud = "^2.7.0"
docker = "^7.1.0"
hcloud = "^2.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true
